--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                         <input type="text" id="name" placeholder="Name" name="name" required autocomplete="name"> <!-- Added autocomplete -->
                     </div>
                 </div>
-                <dgiv class="form-group">
+                <div class="form-group">
                     <label for="password" class="sr-only">password</label>
                     <div class="input-field">
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" id="password" placeholder="Password" name="password" required autocomplete="new-password">
                     </div>
-                </dgiv>
+                </div>
                 <div class="form-group">
                     <label for="email" class="sr-only">Email</label>
                     <div class="input-field">
