added the invalid pseudo class in the input elements to change the color to red of the border and box shadow as well

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <fieldset>
             <legend>Register</legend>
             <!-- Added novalidate to handle validation with JS if needed -->
-            <form novalidate>
+            <form action="#" method="post" novalidate>
                 <div class="form-group">
                     <label for="name" class="sr-only">Name</label>
                     <div class="input-field">
@@ -20,13 +20,13 @@
                         <input type="text" id="name" placeholder="Name" name="name" required autocomplete="name"> <!-- Added autocomplete -->
                     </div>
                 </div>
-                <dgiv class="form-group">
-                    <label for="password" class="sr-only">password</label>
+                <div class="form-group">
+                    <label for="password" class="sr-only">Password</label>
                     <div class="input-field">
                         <i class="fa fa-lock" aria-hidden="true"></i>
                         <input type="password" id="password" placeholder="Password" name="password" required autocomplete="new-password">
                     </div>
-                </dgiv>
+                </div>
                 <div class="form-group">
                     <label for="email" class="sr-only">Email</label>
                     <div class="input-field">
